# xifetch-rs

./: Cargo.toml  README.md  default.nix  flake.nix
src/: color.rs  main.rs
