[package]
name = "xifetch"
version = "2.0.2"
edition = "2021"
authors = ["akmal"]
description = "xifetch is a neofetch alternative written in Rust."
keywords = ["cli", "xifetch", "neofetch"]
repository = "https://github.com/ae5259/xifetch-rs"
license="MIT"
readme="README.md"


[dependencies]
colored = "2.0.0"
